# spiroid

./: Cargo.toml
docs/: CONTRIBUTING  README.md
examples/: all_effects.conf  kaula_solid.conf  magnetic.conf  magnetic_tides.conf  mesa.conf  no_effects.conf  no_effects_starevol.conf  planet_kaula_solid_tides.conf  star_equilibrium_tides.conf  star_zahn_tides_mesa.conf  tides.conf
examples/data/planet/tides/kaula/: leconte2015_steinberger.csv
examples/data/star/evolution/: MESA_10.csv  mesa_10.csv  savgol_04.csv  savgol_05.csv  savgol_06.csv  savgol_07.csv  savgol_08.csv  savgol_09.csv  savgol_10.csv  savgol_11.csv  savgol_12.csv  savgol_13.csv  savgol_14.csv  savgol_15.csv
scripts/: conv_MESA_csv.py  filter_MESA_csv.py  flatten_json.py  plotter.py  setup.py  units.py
scripts/spiroid/: config.py  configmaker.py
src/: lib.rs  main.rs  physics.rs  tests.rs  universe.rs  utils.rs
src/physics/: tests.rs
src/universe/: effects.rs  particles.rs  physics.rs  tests.rs
src/universe/effects/: magnetism.rs  tides.rs  wind.rs
src/universe/effects/magnetism/: tests.rs
src/universe/effects/tides/: constant_time_lag.rs  kaula.rs
src/universe/effects/tides/constant_time_lag/: equilibrium.rs  inertial.rs  tests.rs
src/universe/effects/tides/kaula/: love_number.rs  polynomials.rs  tests.rs
src/universe/particles/: planet.rs  star.rs
src/universe/particles/planet/: tests.rs
src/universe/particles/star/: mesa_csv.rs  star_csv.rs  star_mesa_csv.rs  star_savgol_csv.rs  starevol_csv.rs  tests.rs
src/universe/physics/: tests.rs
src/utils/: tests.rs
(+37 files in other folders)
